syntax = "proto3";

package reduced;

option go_package = "./reduced";

message TotalProfitBySubtotal {
  string item_id = 1;
  string year_month = 2;
  double subtotal = 3;
}
