syntax = "proto3";

package reduced;

option go_package = "./reduced";

message TotalSoldByQuantity {
  string item_id = 1;
  string year_month = 2;
  int32 quantity = 3;
}
